@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1052 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1053 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -521,3 +521,4 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 		the ATF 0.5 just imported.  [jmmv 20080501]
 	hpqlb(4): Hotkey driver for HP notebooks. [cegger 20080501]
 	drm(4): Added amd64 support. [jmcneill 20080504]
+	aac(4): Added IBM ServeRAID 8k support. [sborrill 20080508]
